examples/spork/failing/method_visibility_left_empty/ExpectedCurrently.java
class Cls {
    final static void method() {}
}
